# claude-hooks-shared

./: .env.enc  .gitignore  CLAUDE_STRUCTURE_AUTO_UPDATE.md  HOOK_INVENTORY.md  README.md  lint_results.json  mypy_output.txt  post-tool-use.py  pyproject.toml  session_manager.py
.claude/context_bundles/: 16_jan_session_0a651b89-0dcb-4931-9540-a98144a38df6.json  16_jan_session_2267f227-5e2e-4df2-af63-0aa017f61a4b.json  16_jan_session_ef5315b2-f42c-4516-a46e-a6211f2131d9.json  19_jan_session_01cf03ea-9350-4047-b036-164966754ebc.json  19_jan_session_2dfb93b4-4c62-4ffb-b82e-2b9121d11648.json  19_jan_session_41a4466c-9d74-4c42-b551-4fe7150b41f1.json  19_jan_session_52cc6f73-0cb5-443e-8178-9f5ea5cbb32f.json  19_jan_session_d8bdb75c-f09a-4110-9ce1-1908f36e851a.json
.claude/stats/: ralph_cooldown.json  session_metrics.jsonl
.github/workflows/: README.md  _reusable-lint.yml  _reusable-security.yml  _reusable-tests.yml  ci-autofix.yml  ci.yml
.planning/: MILESTONES.md  PROJECT.md  ROADMAP.md  config.json
.planning/milestones/: v1.0-ROADMAP.md
database/: init_db.py  migrate_add_project_name.sql
docs/: HOOK_INVENTORY.md  VERBALIZED_SAMPLING_GUIDE.md  disaster-recovery.md
docs/runbooks/: CRON_FAILURE.md  DISASTER_RECOVERY.md  HOOK_FAILURE.md  ONBOARDING_NEW_REPO.md  SECRET_ROTATION.md
grafana/: claude-metrics-dashboard.json
hooks/control/: auto-ralph.py  ralph-loop.py
hooks/coordination/: __init__.py  claims_dashboard.py  file_claim.py  file_release.py  stuck_detector.py  task_claim.py  task_release.py
hooks/core/: context-preservation.py  context_bundle_builder.py  mcp_client.py  post-tool-use.py  run_safe.py  safe_hook_wrapper.py  session-end.sh
hooks/intelligence/: ci_status_injector.py  framework-detector.py  lesson_injector.py  meta_learning.py  session_analyzer.py  session_start_tracker.py  strategy_router.py  trajectory_tracker.py
hooks/metrics/: agent-spawn-tracker.py  claudeflow-sync.js  claudeflow-sync.py  dora-tracker.py  quality-score-tracker.py
hooks/productivity/: architecture-validator.py  auto-alpha-debug.py  auto-format.js  auto-format.py  auto-simplify-check.py  grafana-visual-validator.py  readme-generator.py  repo-health-notify.py  task-auto-checkpoint.py  task-classifier-v2.py  task-classifier.py  tdd-guard-check.js  (+1 more)
scripts/: SETUP_SUMMARY.md  backup_secrets.sh  canary_deploy.sh  context-monitor.py  gsm_to_sops_merge.sh.deprecated  heartbeat.py  hook_health.py  metrics-cleanup.py  metrics-export-questdb.py  new-project.sh  project_utils.py  questdb_client.py  questdb_metrics.py  repo_compliance.py  rotation_checker.sh  secret_rotation.py  secrets_loader.py  session_manager.py  statistical_analyzer.py  stats-extended.py  sync_templates.sh  tips_engine.py  verify_phase.py
services/: ai-validation.service  ai_validation_service.py  requirements.txt
templates/: CLAUDE.md.template  README.md  README.md.template
tests/: __init__.py
(+68 files in other folders)
